public/assets/route/default/pages/css/detil.css
.custom-height-setter {
    transition: all 0.3s ease !important;
}

.row.custom-gap {
    --c-gap: 1em;
    gap: var(--c-gap);
}

.custom-gap .col-6 {
    width: calc(100% / 2 - var(--c-gap)/2) !important;
}

.d-grid.progress-box,
.d-grid.timeup {
    grid-template-columns: auto 1fr;
}

.box h6 {
    font-size: small;
}

.box p {
    line-height: 1.25;
}

.box h6+p {
    font-size: x-small;
    line-height: 1;
}

.box .collapseButton {
    font-size: xx-small;
}

#commit-bantuan-area {
    flex-direction: column;
}

.ql-container,
#selengkapnya p,
#commit-bantuan-area p {
    font-size: .725rem;
}

#selengkapnya img {
    margin: 1em auto;
}

#commit-bantuan-area .logo {
    --avatar-wh: 100px;
    width: var(--avatar-wh);
    height: var(--avatar-wh);
}

#commit-bantuan-area .logo img {
    width: calc(var(--avatar-wh)/3*2);
    max-width: var(--avatar-wh);
}

#commit-bantuan-area .button.donasi.btn-lg {
    font-size: 1rem;
}

#commit-bantuan-area img::after {
    font-size: xx-small;
}

#deskripsi-selengkapnya-area img {
    border-radius: 0.75em;
}

#deskripsi-selengkapnya-area .date {
    margin: 0 2px;
    font-size: .55rem;
}

#selengkapnya p:not(:first-child) {
    margin-top: 1em;
}

#selengkapnya * {
    line-height: 2em;
}

#info-berita-area .content .app-image.img-wrapper {
    max-height: calc((100% - var(--bs-gutter-x)) / 16 * 9);
    min-height: calc((100% - var(--bs-gutter-x)) / 16 * 9);
}

#detil-banner-area .app-image.img-wrapper img {
    min-height: inherit;
    width: 100%;
}

h4 {
    font-size: 1rem;
}

h5 {
    font-size: 1rem;
}

h6 {
    font-size: 13px;
}

#donatur-area #title,
#deskripsi-selengkapnya-area #title {
    position: relative;
    overflow: hidden;
}

#donatur-area #title::before,
#donatur-area #title::after,
#deskripsi-selengkapnya-area #title::before,
#deskripsi-selengkapnya-area #title::after {
    position: absolute;
    width: 100%;
    height: 100%;
    content: '';
}

#deskripsi-selengkapnya-area #title::before {
    background-color: #f8f9fa;
    border-top-left-radius: inherit;
    border-bottom-right-radius: inherit;
    left: -.5em;
    top: -.5em;
}

#deskripsi-selengkapnya-area #title::after {
    background-color: var(--orange);
    border-top-left-radius: inherit;
    bottom: calc(-100% + .5em);
    left: 75%;
}

#donatur-area #title > *,
#deskripsi-selengkapnya-area #title > * {
    z-index: 1;
}

#deskripsi-selengkapnya-area #title>span.node {
    position: absolute;
    left: -.5em;
    bottom: .5em;
    width: 100%;
    height: 100%;
    z-index: 0;
    background-color: #f8f9fa;
    border-bottom-right-radius: 10px;
}

#deskripsi-selengkapnya-area #title>span.node::before {
    width: 100%;
    height: 100%;
    content: '';
    background-color: #f8f9fa;
    position: absolute;
    top: .5em;
    left: -.5em;
    border-bottom-right-radius: 5px;
}

#deskripsi-selengkapnya-area .ql-editor {
    padding: 0px;
}

#deskripsi-selengkapnya-area .empty {
    background-image: url('/assets/svg/empty.svg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    width: 100px;
    height: 100px;
}

#donatur-area #title::before {
    background-color: #f8f9fa;
    border-top-left-radius: inherit;
    border-bottom-right-radius: inherit;
    right: -.5em;
    bottom: -.5em;
}

#donatur-area #title::after {
    background-color: var(--orange);
    border-bottom-right-radius: inherit;
    top: calc(-100% + .5em);
    right: 75%;
}

#donatur-area #title>span.node {
    position: absolute;
    right: -.5em;
    top: .5em;
    width: 100%;
    height: 100%;
    z-index: 0;
    background-color: #f8f9fa;
    border-top-left-radius: 10px;
}

#donatur-area #title>span.node::before {
    width: 100%;
    height: 100%;
    content: '';
    background-color: #f8f9fa;
    position: absolute;
    bottom: .5em;
    right: -.5em;
    border-top-left-radius: 5px;
}

.avatar {
    --avatar: 35px;
    width: var(--avatar);
    height: var(--avatar);
    min-width: var(--avatar);
    max-width: var(--avatar);
    min-height: var(--avatar);
    max-height: var(--avatar);
}

.avatar img::after {
    font-size: .55em;
}

#donatur-area>div:not(#title) {
    flex-direction: column;
}

#donatur-area>div:not(#title) .avatar {
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

#donatur-area:not(.load)>div:not(#title) .avatar img[src="/assets/images/default.png"] {
    background-color: var(--bs-white);
}

#donatur-area>div:not(#title) .liked,
#modalListDonatur .liked {
    font-size: xx-small;
}

#modalListDonatur .donatur:nth-child(odd),
#donatur-area>div:not(#title):nth-child(even) {
    border: 1px solid var(--orange);
}

#modalListDonatur .donatur:nth-child(even),
#donatur-area>div:not(#title):nth-child(odd) {
    background-color: #eeeff0 !important;
    border: 1px solid #eeeff0;
}

#modalListDonatur .donatur:nth-child(even) .media .avatar,
#donatur-area>div:not(#title):nth-child(odd) .media .avatar {
    margin-left: auto;
}

#modalListDonatur .donatur:nth-child(even) .media .media-body,
#donatur-area>div:not(#title):nth-child(odd) .media .media-body {
    text-align: right;
}

#modalShareBtn i {
    margin-left: 1px;
}

[aria-live="polite"].position-fixed {
    right: auto;
    left: 1em;
}

#modalListDonatur .modal-body {
    flex-grow: 0;
}

#modalListDonatur .modal-body .donatur {
    flex-direction: column;
}

#modalListDonatur.load .heart-animation::before {
    background-image: none;
}

#modalListDonatur.load .rounded-box {
    border-radius: .5rem;
}

#donatur-area.shown .heart-animation::before {
    animation: heart-burst 0s steps(28) forwards;
}

#donatur-area.shown .heart-animation:not(.animate)::before {
    animation: heart-pop 0s steps(28) backwards;
}

.load.donatur *:not(span),
#donatur-area.load .donatur *:not(span) {
    border-radius: inherit;
}

.load.donatur .avatar,
.load.donatur .avatar,
.load.donatur a[role="button"],
.load.donatur *:not(span) span,
.modal.load .donatur .avatar,
#donatur-area.load .donatur .avatar,
#donatur-area.load .donatur a[role="button"],
#donatur-area.load .donatur *:not(span) span {
    color: transparent;
    background: linear-gradient(-90deg, #eee, #ddd, #ddd, #eee);
    background-size: 400% 400%;
    animation: gradient-load 1s ease infinite;
    border-radius: 5px;
}

.load.donatur i[class*="bg"],
#donatur-area.load .donatur i[class*="bg"] {
    background: transparent !important;
}

.load.donatur a,
#donatur-area.load .donatur a {
    cursor: none !important;
    pointer-events: none !important;
}

.load.donatur span,
.load.donatur a i,
#donatur-area.load .donatur span,
#donatur-area.load .donatur a i {
    color: transparent !important;
}

.load.donatur img.avatar,
.modal.load img.avatar,
#donatur-area.load .donatur img.avatar {
    visibility: hidden;
}

#modalListDonatur .modal-header {
    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
}

#modalListDonatur .modal-header .col-lg-6[style] .btn-close {
    margin-right: -.2em !important;
}

#modalListDonatur .modal-body {
    overflow-x: hidden;
}

@media (max-width: 426px) {
    .sticky-btn {
        position: fixed;
        width: calc(100% - 56px + 57px);
        z-index: 1;
        bottom: 0px;
        padding-top: 12px;
        padding-bottom: 12px;
        padding-right: 69px;
        gap: 14px !important;
        background-color: #fff;
        border-top: 1px solid var(--bs-light);
        box-shadow: 0px -20px 50px 0px rgba(0, 0, 0, 0.05)
    }
    .sticky-btn > a:not([data-bs-toggle="modal"]) {
        font-size: 1.15rem !important;
    }

    .sticky-btn > a[data-bs-toggle="modal"] {
        font-size: 0.65em !important;
    }
}

@media (min-width: 320px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: 166.5px;
        min-height: 166.5px;
    }
}

@media (min-width: 321px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
        min-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
    }
}

@media (min-width: 375px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: 197.62px;
        min-height: 197.62px;
    }

    .ql-container,
    #selengkapnya p,
    #commit-bantuan-area p {
        font-size: .75rem;
    }

    .avatar {
        --avatar: 40px;
    }
}

@media (min-width: 376px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
        min-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
    }
}

@media (min-width: 425px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: 225.748px;
        min-height: 225.748px;
    }

    #commit-bantuan-area .button.donasi.btn-lg {
        font-size: 1.25rem;
    }

    .ql-container,
    #selengkapnya p,
    #commit-bantuan-area p {
        font-size: .8rem;
    }

    .avatar {
        --avatar: 50px;
    }
}

@media (min-width: 426px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
        min-height: calc((100vw - var(--bs-gutter-x)) / 16 * 9);
    }
}

@media (min-width: 480px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: 239.625px;
        min-height: 239.625px;
    }

    .ql-container,
    #selengkapnya p,
    #commit-bantuan-area p {
        font-size: .9rem;
    }

    h5 {
        font-size: 20px;
    }

    h6 {
        font-size: 1rem;
    }
}

@media (min-width: 767px) {

    #commit-bantuan-area {
        flex-direction: row;
    }

    #detil-banner-area .app-image.img-wrapper {
        max-height: 290.25px;
        min-height: 290.25px;
    }
}

@media (min-width: 768px) {

    .custom-gap .col-md-12 {
        width: 100% !important;
    }

    .box h6 {
        font-size: 16px;
    }

    .box h6+p {
        font-size: small;
        line-height: 1;
    }

    #detil-banner-area .app-image.img-wrapper {
        max-height: none;
    }

    #commit-bantuan-area .logo {
        --avatar-wh: 115px;
    }

    #commit-bantuan-area img::after {
        font-size: x-small;
        padding: 0px 5px;
    }

    .avatar {
        --avatar: 55px;
    }

    .avatar.border.rounded {
        border-radius: .5rem !important;
    }
}

@media (min-width: 992px) {

    #detil-banner-area .app-image.img-wrapper {
        max-height: calc((569px / 1913) * 936);
        min-height: calc((569px / 1913) * 936);
    }

    .ql-container,
    #selengkapnya p,
    #commit-bantuan-area p {
        font-size: 1rem;
    }

    #deskripsi-selengkapnya-area .date {
        font-size: .75rem;
    }

    h4 {
        font-size: 1.2rem;
    }

    #commit-bantuan-area .logo {
        --avatar-wh: 150px;
    }

    .row.custom-gap {
        --c-gap: 1.5em;
    }
}

@media (min-width: 1200px) {
    #detil-banner-area .app-image.img-wrapper {
        max-height: calc((569px / 1913) * 1116);
        min-height: calc((569px / 1913) * 1116);
    }

    #deskripsi-selengkapnya-area .date {
        font-size: .95rem;
    }

    h4 {
        font-size: 1.5rem;
    }

    .avatar {
        --avatar: 60px;
    }

    .avatar.border.rounded {
        border-radius: 1rem !important;
    }
}

@media (min-width: 1400px) {
    #detil-banner-area .app-image.img-wrapper {
        max-height: calc((569px / 1913) * 1296);
        min-height: calc((569px / 1913) * 1296);
    }

    .date {
        font-size: .95rem;
    }

    h4 {
        font-size: 25px;
    }
}

